--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <DOCTYPE html>
     <head>
         <title> The Site </title>
+        <link type = "text/css" rel = "stylesheet" href = "Main-Page-Stylesheet.css"/>
+        <link type = "text/javascript" rel = "stylesheet" href = "index.js"/>
+        <script src = "index.js"></script>
     </head>
     <body>
         Hello
