--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <script src = "index.js"></script>
     </head>
     <body>
-        Hello
+        <!-- Here -->
+        <div id = "S1"></div>
+        <div id = "S2"></div>
+        <div id = "S3"></div>
+        <div id = "S4"></div>
     </body>
 </html>
