--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <DOCTYPE html>
     <head>
         <title> The Site </title>
-        <link type = "text/css" rel = "stylesheet" href = "Main-Page-Stylesheet.css"/>
+        <link type = "text/css" rel = "stylesheet" href = "index.css"/>
         <link type = "text/javascript" rel = "stylesheet" href = "index.js"/>
         <script src = "index.js"></script>
+        <scrip> </script>
     </head>
     <body>
         <!-- Here -->
-        <div id = "S1"></div>
+        <div id = "S1"> <p> hi </p> </div>
         <div id = "S2"></div>
         <div id = "S3"></div>
         <div id = "S4"></div>
+        <img id = "K1"/>
     </body>
 </html>
